# ml-courses

./: .gitignore  .gitmodules  README.md  pyproject.toml
_notebooks/proyects/001.titanic/: 01.eda_1.ipynb
_notebooks/scikit-learn-mooc/notebooks/: 01.01_tabular_data_exploration.ipynb
