[tool.poetry]
name = "ml-courses"
version = "0.1.0"
description = ""
authors = ["victor.durand <victor.durand@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
pandas = "^1.4.1"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
ipykernel = "^6.9.1"
jupyterlab = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
